# config_binding_service/swagger/swagger.yaml
@@ -1,5 +1,7 @@
+# ============LICENSE_START=======================================================
+# org.onap.dcae
 # ================================================================================
-# Copyright (c) 2017 AT&T Intellectual Property. All rights reserved.
+# Copyright (c) 2018 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,10 +17,12 @@
 # ============LICENSE_END=========================================================
 #
 # ECOMP is a trademark and service mark of AT&T Intellectual Property.
+
+
 ---
 swagger: "2.0"
 info:
-  version: "1.0.0"
+  version: "1.3.0"
   title: "Config Binding Service"
 paths:
   /service_component/{service_component_name}:
@@ -34,10 +38,44 @@ paths:
       responses:
         200:
           description: OK; the bound config is returned as an object
-          schema: 
+          schema:
             type: object
         404:
           description: there is no configuration in Consul for this component
+  /dti/{service_component_name}:
+    parameters:
+      - name: "service_component_name"
+        in: "path"
+        description: "Service Component Name. service_component_name:dti must be a key in consul."
+        required: true
+        type: "string"
+    get:
+      description: "Returns as JSON the value for service_component_name:dti"
+      operationId: "config_binding_service.controller.dtievents"
+      responses:
+        200:
+          description: OK; the KV value is returned as an object
+          schema:
+            type: object
+        404:
+          description: there is no configuration in Consul for this component's DTI events
+  /policies/{service_component_name}:
+    parameters:
+      - name: "service_component_name"
+        in: "path"
+        description: "Service Component Name. service_component_name:policies must be a key in consul."
+        required: true
+        type: "string"
+    get:
+      description: "Returns as JSON the value for service_component_name:policies"
+      operationId: "config_binding_service.controller.policies"
+      responses:
+        200:
+          description: OK; the KV value is returned as an object
+          schema:
+            type: object
+        404:
+          description: there is no configuration in Consul for this component's policies
   /healthcheck:
     get:
       description: "This is the  health check endpoint. If this returns a 200, the server is alive and consul can be reached. If not a 200, either dead, or no connection to consul"
